Starting lighten/darken input styles, starting %parallax-* layer components/mixin, changing reversed positions from inherit to initial

--- a/scss/modules/forms/_classes.scss
+++ b/scss/modules/forms/_classes.scss
@@ -20,6 +20,9 @@ input[type="color"] {
 	@extend %input;
     @include style('input');
 
+    &.lighten { @include style('input', 'lighten'); }
+    &.darken { @include style('input', 'darken'); }
+
 	&.small { @extend %input-small; }
 
 	&.large { @extend %input-large; }
