--- a/scss/modules/layers/_module.scss
+++ b/scss/modules/layers/_module.scss
@@ -35,6 +35,9 @@ $drawer-small-height: $drawer-full-height !default;
 $drawer-medium-width: $drawer-half-width !default;
 $drawer-medium-height: $drawer-full-height !default;
 
+// Parallax Settings
+$parallax-perspective: 100px !default;
+
 // Imports
 @import
 	'_mixins',
