--- a/scss/modules/position/_mixins.scss
+++ b/scss/modules/position/_mixins.scss
@@ -20,7 +20,7 @@
         }
         @else {
             left: $horizontal;
-            right: inherit;
+            right: initial;
         }
     }
 
@@ -33,7 +33,7 @@
         }
         @else {
             top: $vertical;
-            bottom: inherit;
+            bottom: initial;
         }
     }
 
@@ -60,42 +60,42 @@
     @if $horizontal {
         @if $horizontal == left or $horizontal == afterLeft { 
             left: 0;
-            right: inherit;
+            right: initial;
         }
         @else if $horizontal == centerLeft {
             left: 0;
-            right: inherit;
+            right: initial;
             $transform-list: append($transform-list, translateX(-50%));
         }
         @else if $horizontal == right or $horizontal == beforeRight {
             right: 0;
-            left: inherit;
+            left: initial;
         }
         @else if $horizontal == centerRight {
             right: 0;
-            left: inherit;
+            left: initial;
             $transform-list: append($transform-list, translateX(50%));
         }
         @else if $horizontal == before or $horizontal == beforeLeft {
             right: 100%;
-            left: inherit;
+            left: initial;
         }
         @else if $horizontal == after or $horizontal == afterRight {
             left: 100%;
-            right: inherit;
+            right: initial;
         }
         @else if $horizontal == center {
             left: 50%;
-            right: inherit;
+            right: initial;
             $transform-list: append($transform-list, translateX(-50%));
         }
         @else if $horizontal == beforeCenter {
             right: 50%;
-            left: inherit;
+            left: initial;
         }
         @else if $horizontal == afterCenter {
             left: 50%;
-            right: inherit;
+            right: initial;
         }
         @else {
             left: $horizontal;
@@ -105,67 +105,67 @@
     @if $vertical {  
         @if $vertical == top or $vertical == belowTop {
             top: 0;
-            bottom: inherit;
+            bottom: initial;
         }
         @else if $vertical == midTop {
             top: 0;
-            bottom: inherit;
+            bottom: initial;
             $transform-list: append($transform-list, translateY(-50%));
         }
         @else if $vertical == bottom or $vertical == aboveBottom {
             bottom: 0;
-            top: inherit;
+            top: initial;
         }
         @else if $vertical == midBottom {
             bottom: 0;
-            top: inherit;
+            top: initial;
             $transform-list: append($transform-list, translateY(50%));
         }
         @else if $vertical == below or $vertical == belowBottom {
             top: 100%;
-            bottom: inherit;
+            bottom: initial;
         }
         @else if $vertical == above or $vertical == aboveTop {
             bottom: 100%;
-            top: inherit;
+            top: initial;
         }
         @else if $vertical == center or $vertical == middle {
             top: 50%;
             $transform-list: append($transform-list, translateY(-50%));
-            bottom: inherit;
+            bottom: initial;
         }
         @else if $vertical == aboveCenter or $vertical == aboveMiddle {
             bottom: 50%;
-            top: inherit;
+            top: initial;
         }
         @else if $vertical == belowCenter or $vertical == belowMiddle {
             top: 50%;
-            bottom: inherit;
+            bottom: initial;
         }
         @else {
             top: $vertical;
-            bottom: inherit;
+            bottom: initial;
         }
     }
 
     @if $top {
         top: $top;
-        bottom: inherit;
+        bottom: initial;
     }
 
     @if $bottom {
         bottom: $bottom;
-        top: inherit;
+        top: initial;
     }
 
     @if $left {
         left: $left;
-        right: inherit;
+        right: initial;
     }
 
     @if $right {
         right: $right;
-        left: inherit;
+        left: initial;
     }
 
     @if $transform-list {
