Dropbox study! Adding -lighten and -darken to default and transparent button themes; Adding -implicit to radio and checkbox components; Adding (experimental) pad-container; Adding border-* to respective borders-* components (and clean-up); Adding %text-midcenter component (pretty legit);

--- a/docs/views/buttons.html
+++ b/docs/views/buttons.html
@@ -6,7 +6,9 @@
     <div class=" hidden">Short 3</div>
 </button>
 
-<a ng-repeat="color in ['','primary','secondary','light','dark']" class="button {{color}}">a.{{color}}</a>
+<a ng-repeat="color in ['','primary','secondary','light','dark','lighten','darken']" class="button {{color}}">a.{{color}}</a>
+<br>
+<a ng-repeat="color in ['','primary','secondary','light','dark','lighten','darken']" class="button transparent {{color}}">a.{{color}}</a>
 <a href="_" class="button link">a.button.link</a>
 
 <h2>Button Sizes</h2>
