--- a/scss/modules/layers/_module.scss
+++ b/scss/modules/layers/_module.scss
@@ -15,6 +15,8 @@ $overlay-z-index: 10 !default;
 // Container Settings
 $container-min-width: false !default;
 $container-max-width: 960px !default;
+$container-min-height: false !default;
+$container-max-height: 500px !default;
 
 // Card Settings
 $card-shadow-index: 1 !default;
