--- a/scss/modules/type/_classes.scss
+++ b/scss/modules/type/_classes.scss
@@ -132,6 +132,7 @@ a {
 
 .text-middle { @extend %text-middle; }
 .text-bottom { @extend %text-bottom; }
+.text-midcenter { @extend %text-midcenter; }
 
 // Preformatted Text
 // -----------------
